--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Profile</title>
     <link rel="icon" type="image/x-icon" href="https://scontent.fhan5-2.fna.fbcdn.net/v/t39.30808-6/278091078_1996460823871351_5955089789385928029_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=ifgsFdiQx0QAX_ETQja&_nc_ht=scontent.fhan5-2.fna&oh=00_AfDCugdHjnLddNRjoPkFavd1NAwprqZcn_U6RSaXaj-xyg&oe=645C3B42">
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/font/fonts/themify-icons-font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="themify-icons.css">
 </head>
 <body>
     <div class="hero">
         <nav>
-            <img src="/assets/images/logooo.png" class="logo">
+            <img src="logooo.png" class="logo">
             <button class="js-about">ABOUT</button>
         </nav>
         <div class="detel">
             <h1>I'M <span>TRONG</span></h1>
         </div>
         <div class="images">
-            <img src="/assets/images/shape.png" class="shape">
-            <img src="/assets/images/boy.png" class="boy">
+            <img src="shape.png" class="shape">
+            <img src="boy.png" class="boy">
         </div>
 
         <div class="social">
